hard-gists/2783865/run.log
=== Docker Run Log for 2783865 ===
Started at: Mi 29. Okt 13:14:53 CET 2025

[2025-10-29 13:14:53] START: Running container for 2783865
[2025-10-29 13:14:53] SUCCESS: Container d43286fe51253ec2c681ce5904c60bce0bc523480f387e0ed16f6064cb29fe55 started for 2783865
=== Container logs for 2783865 ===
  File "/snippet.py", line 48
    except Exception, e:      
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2783865 ===
[2025-10-29 13:14:55] INFO: Container d43286fe51253ec2c681ce5904c60bce0bc523480f387e0ed16f6064cb29fe55 has stopped
